# PyHTSL

./: .gitignore  README.md  main.py  pyproject.toml  setup.py  yressir.py
.claude/: settings.local.json
.github/workflows/: lint.yml  ruff.yml  tests.yml
docs/: SUMMARY.md  book.toml  docs-sync.md  exporting.md  expressions.md  importables.md  installation.md  items.md  locations.md  overview.md  project-structure.md  simulator.md
docs/htsw/: SUMMARY.md  book.toml  importables.md  overview.md  tooling.md
examples/: add_experience.py  experience.py  housing.py  loops.py  randomint.py
pyhtsl/: __init__.py  base_object.py  block.py  cached_htsl_imports_folder.txt  checkable.py  config.py  container.py  deferred.py  editable.py  evaluator.py  execute.py  export.py  expression.py  fixer.py  helpers.py  internal_type.py  limits.py  line_type.py  logger.py  nbt.py  placeholders.py  stat.py  team.py  tiny.py  types.py  utils.py  write.py  writer.py
pyhtsl/actions/: _inside_line.py  apply_inventory_layout.py  apply_potion_effect.py  block_type.py  can_pvp.py  cancel_event.py  change_player_group.py  change_velocity.py  chat.py  clear_potion_effects.py  close_menu.py  consume_item.py  create_function.py  damage_amount.py  damage_cause.py  date_unix.py  delete_items.py  display_action_bar.py  display_menu.py  display_title.py  doing_parkour.py  drop_item.py  enchant_held_item.py  exit_function.py  fail_parkour.py  fishing_environment.py  full_heal.py  function.py  give_experience_levels.py  give_item.py  go_to_house_spawn.py  goto.py  group_color.py  group_name.py  group_priority.py  group_tag.py  has_item.py  has_potion_effect.py  house_cookies.py  house_guests.py  (+57 more)
pyhtsl/condition/: __init__.py  base_condition.py  binary_condition.py  condition.py  conditional_statement.py  conditional_statements.py  double_sided_condition.py  named_condition.py  raw.py  statements.py  tiny.py
pyhtsl/execute/: backend_type.py  context.py  decorator.py  exception.py  internal_housing_type.py  java_long.py  player.py  schedulers.py
pyhtsl/expression/: __init__.py  assignment_expression.py  binary_expression.py  (+13 more)
pyhtsw/: __init__.py  block.py  checkable.py  config.py  container.py  deferred.py  editable.py  export.py  helpers.py  importable.py  internal_type.py  limits.py  location.py  module_export.py  nbt.py  placeholders.py  types.py
scripts/: create_skill.py  sync_docs.py
tests/: helpers.py  main.py  test_action_computed_arg.py  test_action_limits.py  test_approximate_sin_cos.py  test_approximate_sqrt.py  test_arithmetic.py  test_auto_unset.py  test_bitwise.py  test_cast.py  test_chat_format.py  test_cheap_read_write.py  test_chunked.py  test_comparison.py  test_compound_operand.py  test_condition_invert.py  test_conditional.py  test_constant_fold.py  test_execute_decorator.py  test_execution_context.py  test_execution_context_print.py  test_export_cleanup.py  test_flags.py  test_format_time.py  test_function.py  test_global_stat.py  test_housing_type.py  test_htsw_export.py  test_htsw_importables.py  test_htsw_module_export.py  test_htsw_module_tree.py  test_internal_type.py  test_interpolation_temps.py  test_java_long.py  test_look_vector.py  test_mod.py  test_multiplayer_context.py  test_nested_blocks.py  test_nested_conditional.py  test_optimizer_block_level.py  (+20 more)
(+285 files in other folders)
