[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhtsl"
version = "2.9.1"
description = "Python wrapper for HTSL created to simplify the process of making housings on Hypixel"
requires-python = ">=3.12"
authors = [{ name = "Jesse Janssen" }]
urls = { Homepage = "https://github.com/69Jesse/PyHTSL" }
readme = "README.md"
dependencies = ["numpy>=2.4.2"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "single"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pyhtsl*"]

[tool.setuptools.package-data]
"*" = ["*.*"]
