[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhtsw"
version = "4.0.0"
description = "Python wrapper for HTSW created to simplify the process of making housings on Hypixel"
requires-python = ">=3.13"
authors = [{ name = "Jesse Janssen" }]
urls = { Homepage = "https://github.com/69Jesse/PyHTSW" }
readme = "README.md"
dependencies = [
    "mido>=1.3.3",
    "numpy>=2.4.3",
    "pynbs>=1.1.0",
    "sounddevice>=0.5.5",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
    "COM812", # missing trailing comma (explodes wrapped calls one-per-line)
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.format]
quote-style = "single"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pyhtsw*"]

[tool.setuptools.package-data]
"*" = ["*.*", "misc/**/*"]
